2007-08-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fix bug #6026: in plaintext base URL is not shown if there's no image
	* Fix bug #6027: corrected JOIN statement in tx_directmail_static::getIdList
	* added: back button in the send wizard ( request: #6294)
	
2007-08-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* added: changing between modules doesn't need to choose SysFolder again
	
2007-08-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* fixed: option for removing all recepients records before importing
	* fixed: wrong field name in the mailer engine module
	* added: added some authentification libraries in cron script, might be used by other extensions

2007-07-23 Ivan Kartolo <ivan.kartolo@dkd.de>
	* upload to typo3xdev
	
2007-06-17 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Version 2.5.1
	* Fixed bug: Fatal error function getCsvValues in class.tx_directmail_dmail.php
	* Static functions are put in a static class.

2007-02-26 Ivan Kartolo <ivan.kartolo@dkd.de>	
	* Version 2.5.0
	* Folder structure is changed
	* New module structure
	* Better GUI
	* Improved version based on 2.2.0
	
2006-11-22 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Added option to disable manual invocation of mailer engine

2006-11-10 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Fix bug #4380: initialise $urlCounter correctly in mod_web_dmail:cmd_stats():

2006-11-07 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Optional tab-style menu
	* Added some german translations to CSH

2006-10-31 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* Show a compact info of direct mail in all commands of mode "direct mail"

2006-10-25 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Dropped PAGE object tx_directmail_pi1_test (typeNum 199), send correct Content-type with tx_directmail_pi1 (typeNum 99) instead

2006-10-17 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* Added field renderedsize to TCA as type "none" (format "filesize")

2006-10-12 Martin Kutschker <martin.t.kutschker@blackbox.net>