@@ -1,3 +1,7 @@
+2007-09-13 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Fix bug #4661: convert the charset of the USER markers
+	* Fix bug #6297: trimming the "name" field before set it as recipient
+
 2007-08-05 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Fix bug #6026: in plaintext base URL is not shown if there's no image
 	* Fix bug #6027: corrected JOIN statement in tx_directmail_static::getIdList
